# protos-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: native.yml  wasm_deploy.yml
src/: app.rs  gfx.rs  lib.rs  main.rs  protos.rs
src/gfx/: backbuffer.rs  buffer.rs  camera.rs  compute_pass.rs  core.rs  gfx.rs  graph.rs  graphic_pass.rs  mesh.rs  mod.rs  resource.rs  shader.rs  shader.wgsl  texture.rs
src/graph/: connection.rs  core.rs  data_type.rs  graph.rs  mod.rs  node.rs  node_backbuffer_pass.rs  node_buffer.rs  node_camera.rs  node_compute_pass.rs  node_graphic_pass.rs  node_mesh.rs  node_shader.rs  node_texture_file.rs  node_texture_resource.rs  response.rs  value.rs
src/graph/nodes/: backbuffer_pass_node.rs  buffer_node.rs  camera_node.rs  compute_pass_node.rs  graphic_pass_node.rs  mesh_node.rs  mod.rs  shader_node.rs  texture_file_node.rs  texture_resource_node.rs
web/: package.json  server.js
web/public/: index.html
