[package]
name = "protos-rs"
version = "0.1.0"
authors = ["Antoine Altorffer <altorantoine@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
anyhow = "1.0"
serde = { version = "1.0", optional = true }
chrono = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
wgpu ="0.18"
egui = "0.25"
egui-wgpu = "0.25"
egui-winit = "0.25"
egui_extras = {version="0.25", features = ["syntect"]}
#epi = "0.17"
#eframe = "0.25.0"
egui_node_graph="0.4.0" # Max version supported of egui is 0.19.0
winit = { version="0.29.4", features = ["x11"]}
backtrace = "0.3.69"
serde_json = "1.0.111"
syntect = "5.1.0"


[patch.crates-io]
egui_node_graph = { git = "https://github.com/antaalt/egui_node_graph.git", branch = "upgrade-egui" }

[features]
default = ["persistence"]
persistence = ["serde", "egui_node_graph/persistence", "egui/persistence", "wgpu/trace", "wgpu/replay"]

[profile.release]
opt-level = 2 # fast and small wasm
