[package]
name = "protos-rs"
version = "0.1.0"
authors = ["Antoine Altorffer <altorantoine@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
anyhow = "1.0"
serde = { version = "1.0", optional = true }
chrono = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
wgpu ="0.18"
egui = "0.25"
egui-wgpu = "0.25"
egui-winit = {version="0.25", default-features = false} # arboard dependency fail build on wasm... 
egui_extras ="0.25"# features = ["syntect"]}
egui_node_graph="0.4.0" # Max version supported of egui is 0.19.0
winit = { version="0.29.4", features = ["x11"]}
backtrace = "0.3.69"
serde_json = "1.0.111"
#syntect = "5.1.0" # onig fail build with clang...

[patch.crates-io]
egui_node_graph = { git = "https://github.com/antaalt/egui_node_graph.git", branch = "upgrade-egui" }

[features]
default = ["persistence"]
persistence = ["serde", "egui_node_graph/persistence", "egui/persistence", "wgpu/trace", "wgpu/replay"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3.5"
console_log = "1.0.0"
js-sys = "0.3.68"

[profile.release]
opt-level = 2 # fast and small wasm
